# generic_sensor

./: .gitignore  CMakeLists.txt  README.rst  prj.conf
src/: generic_led.c  generic_led.h  generic_sensor_adc.c  generic_sensor_adc.h  main.c
